# DBProgramContest

./: .gitignore  CMakeLists.txt  Dockerfile  Joiner.cpp  Log.cpp  Operators.cpp  Parser.cpp  README  Relation.cpp  main.cpp
include/: Column.hpp  Consts.hpp  Joiner.hpp  Log.hpp  Operators.hpp  Parser.hpp  Relation.hpp  Utils.hpp
test/: CMakeLists.txt  TestOperators.cpp  TestRelation.cpp
workloads/small/: README.md  log_before_optimization.txt  r0.sql  r1.sql  r10.sql  r11.sql  r12.sql  r13.sql  r2.sql  r3.sql  r4.sql  r5.sql  r6.sql  r7.sql  r8.sql  r9.sql  small.result  small.work
